config/envoy.yaml
node:
  cluster: ecdsdemo
  id: ecdsdemo

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
  - name: apim
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 19090
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: test_route
            virtual_hosts:
            - name: www
              domains:
              - "*"
              routes:
                - match:
                    headers:
                      - name: ":method"
                        string_match:
                          exact: "POST"
                    safe_regex:
                      "regex": "^\\Q/demo.ContactService/\\E[^/]+$"
                  route:
                    cluster: grpc
                    timeout: 300s
                - match:
                    headers:
                      - name: ":method"
                        string_match:
                          exact: "POST"
                    safe_regex:
                      "regex": "^\\Q/demo.AddressService/\\E[^/]+$"
                  route:
                    cluster: grpc
                    timeout: 300s
          http_filters:
          - name: contact.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: ./config/contact.pb
              services:
                - demo.ContactService
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: false

          - name: address.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: ./config/address.pb
              services:
                - demo.AddressService
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: false


          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: grpc
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 9090
